--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,7 +8,14 @@
   z-index: 1;
 }
 
-.vswiper-wrapper {
+.vswiper__track {
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  height: 100%;
+}
+
+.vswiper__list {
   position: relative;
   width: 100%;
   height: 100%;
@@ -18,7 +25,7 @@
   box-sizing: content-box;
 }
 
-.vswiper-wrapper {
+.vswiper__list {
   transform: translate3d(0px, 0, 0);
 }
 
