--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,11 +8,12 @@
   z-index: 1;
 }
 
-.virchual__track {
+.virchual__frame {
   position: relative;
   z-index: 0;
   overflow: hidden;
   height: 100%;
+  user-select: none;
 }
 
 .virchual__list {
@@ -30,11 +31,18 @@
 }
 
 .virchual-slide {
+  background-color: #fff;
   flex-shrink: 0;
   width: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
+  transition-duration: 0.2s;
+  transform: translate3d(0%, 0px, 0px);
   transition-property: transform;
+}
+
+.virchual-slide--active {
+  z-index: 10;
 }
 
 .virchual__pagination {
