--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -36,62 +36,99 @@
   flex-shrink: 0;
   width: 100%;
   height: 100%;
+  top: 0;
   position: absolute;
   transition-duration: 0.2s;
   transform: translate3d(0%, 0px, 0px);
   transition-property: transform;
+  will-change: transform;
+}
+
+.virchual-slide * {
+  -webkit-user-drag: none;
+  -ms-user-drag: none;
+  -moz-user-drag: none;
+  user-drag: none;
+  user-select: none;
+  pointer-events: none;
 }
 
 .virchual-slide--active {
   z-index: 10;
 }
 
+.virchual__control {
+  appearance: none;
+  position: absolute;
+  border: none;
+  background-color: transparent;
+  top: 0;
+  width: 40px;
+  position: absolute;
+  z-index: 1;
+  outline: 0;
+  height: 100%;
+  cursor: pointer;
+  transition: background 0.3s ease 0s;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.virchual__control--prev {
+  left: 0;
+}
+
+.virchual__control--next {
+  right: 0;
+}
+
+.virchual__control svg {
+  height: 20px;
+  width: 20px;
+  display: block;
+  fill: currentcolor;
+  color: #000;
+}
+
 .virchual__pagination {
   position: absolute;
-  text-align: center;
-  transition: 0.3s opacity;
-  transform: translate3d(0, 0, 0);
   z-index: 10;
   overflow: hidden;
-  font-size: 0;
   left: 50%;
   transform: translateX(-50%);
-  white-space: nowrap;
   bottom: 10px;
 }
 
-.virchual__pagination-track {
-  position: relative;
-  bottom: unset;
+.virchual__pagination-bullet {
+  width: 16px;
+  height: 16px;
+  display: inline-flex;
+  justify-content: center;
   align-items: center;
   padding: 0;
-  margin: 0 -5px;
-  white-space: nowrap;
-  height: 100%;
-  transform: translateX(0);
-  transition: all 0.25s;
-}
-
-.virchual__pagination__page {
-  width: 8px;
-  cursor: pointer;
-  height: 8px;
-  display: inline-block;
-  border-radius: 100%;
-  background: #000;
-  padding: 0;
-  opacity: 0.2;
-  transform: scale(0.33);
-  position: relative;
-  margin: 0 4px;
+  margin: 0;
+  position: absolute;
   transition: 0.2s transform;
 }
 
-.virchual__pagination__page.active-prev,
-.virchual__pagination__page.active-next {
-  transform: scale(0.66);
+.virchual__pagination-bullet::before {
+  content: '';
+  height: 8px;
+  width: 8px;
+  display: block;
+  transform: scale(0.75);
+  opacity: 0.65;
+  border-radius: 100%;
+  background: #fff;
+  filter: drop-shadow(0 0 1px rgba(0, 0, 0, 0.3));
 }
 
-.virchual__pagination__page.is-active {
+.virchual__pagination-bullet--edge::before {
+  transform: scale(0.5);
+}
+
+.virchual__pagination-bullet--active::before {
   transform: scale(1);
+  transition-duration: inherit;
+  opacity: 1;
 }
