--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -20,8 +20,7 @@
 }
 
 .demoSection .image-swiper {
-  border: 1px solid #ccc;
-  background-color: #333;
+  background-color: #fff;
   height: 265px;
   width: 400px;
   margin: 0 auto;
@@ -37,6 +36,10 @@
   width: 20px;
   display: block;
   fill: currentcolor;
+}
+
+.demoSection .image-swiper .virchual__frame {
+  border-radius: 4px;
 }
 
 .nav-footer {
