--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -9,7 +9,7 @@
 .homeWrapper {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
 }
 
