fix(slider): use direct decendents, control focus outline

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -61,6 +61,10 @@
   -webkit-tap-highlight-color: transparent;
 }
 
+.virchual__control:focus {
+  outline: none;
+}
+
 .virchual__control--prev {
   left: 0;
 }
